--- a/src/app/components/profile-settings/profile-settings/profile-settings.component.css
+++ b/src/app/components/profile-settings/profile-settings/profile-settings.component.css
@@ -339,6 +339,29 @@
   .button-flex {
     display: flex;
   }
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+  }
+
+  .popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10000;
+  }
+
+  .popup img {
+    width: 555px;
+    height: 292px;
+  }
 }
 
 @media screen and (max-width: 1450px) {
@@ -657,6 +680,17 @@
   .button-flex {
     display: flex;
   }
+
+  .popup {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .popup img {
+    width: calc(0.75*555px);
+    height: calc(0.83*292px);
+  }
 }
 
 @media screen and (max-width: 1370px) {
@@ -974,5 +1008,16 @@
 
   .button-flex {
     display: flex;
+  }
+
+  .popup {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .popup img {
+    width: calc(0.71*555px);
+    height: calc(0.71*292px);
   }
 }
