--- a/src/app/components/profile-settings/profile-settings/profile-settings.component.html
+++ b/src/app/components/profile-settings/profile-settings/profile-settings.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div *ngIf="user">
+<div *ngIf="user" class="profile-settings">
   <div class="return-to-main">
     <a routerLink="/">
       <img src="assets/img/return-button.svg" alt="return-button" class="return-button">
