--- a/src/app/components/place-settings/place-settings.component.html
+++ b/src/app/components/place-settings/place-settings.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<div class="wrapper">
 
 <div class="return-to-main">
   <a routerLink="/">
@@ -58,4 +59,5 @@
   </div>
 </div>
 
-<app-footer></app-footer>
+<app-footer class="footer"></app-footer>
+</div>
