--- a/src/app/components/place-settings/place-settings.component.css
+++ b/src/app/components/place-settings/place-settings.component.css
@@ -33,9 +33,14 @@
   }
 
   .main-top-content {
+    flex: 1 0 auto;
     display: flex;
     margin-left: 202px;
     margin-top: 65px;
+  }
+
+  .footer{
+    flex: 0 0 auto;
   }
 
   .profile-navigation {
@@ -185,9 +190,14 @@
   }
 
   .main-top-content {
+    flex: 1 0 auto;
     display: flex;
     margin-left: calc(0.75*202px);
     margin-top: calc(0.83*65px);
+  }
+
+  .footer{
+    flex: 0 0 auto;
   }
 
   .profile-navigation {
@@ -336,9 +346,14 @@
   }
 
   .main-top-content {
+    flex: 1 0 auto;
     display: flex;
     margin-left: calc(0.71*202px);
     margin-top: calc(0.71*65px);
+  }
+
+  .footer{
+    flex: 0 0 auto;
   }
 
   .profile-navigation {
