карта у мест, исправления с прошлога сема + нововведения

--- a/src/app/components/ad-business/ad-business.component.html
+++ b/src/app/components/ad-business/ad-business.component.html
@@ -106,7 +106,8 @@
         </span>
       </div>
 
-      <button class="button-send" type="submit" [disabled]="form.invalid || form.disabled" (click)="[onClick(), showPopupAndRedirect()]">
+      <button class="button-send" type="submit" [disabled]="form.invalid || form.disabled"
+        (click)="[onClick(), showPopupAndRedirect()]">
         <!-- Доделать вывод плохого сообщения -->
         Отправить заявку
       </button>
