--- a/src/app/components/main-webpage/coworkings-list/coworkings-list.component.html
+++ b/src/app/components/main-webpage/coworkings-list/coworkings-list.component.html
@@ -16,7 +16,7 @@
     <div class="coworking-info-container">
 
       <div class="coworking-image">
-        <img src="{{photos[0]}}" alt="img">
+        <img src="{{photos[0]}}" alt="img" onerror="this.src='assets/img/logo.svg'">
       </div>
 
       <div class="coworking-content">
