--- a/src/app/components/profile-settings/profile-settings/profile-settings.component.html
+++ b/src/app/components/profile-settings/profile-settings/profile-settings.component.html
@@ -1,123 +1,126 @@
 <app-header></app-header>
 
-<div *ngIf="user" class="profile-settings">
-  <div class="return-to-main">
-    <a routerLink="/">
-      <img src="assets/img/return-button.svg" alt="return-button" class="return-button">
-    </a>
-    <span>Вернуться к поиску</span>
-  </div>
-
-  <div class="main-top-content">
-
-    <div class="profile-navigation">
-      <ul>
-        <li><a routerLink="/favourites">Избранное</a></li>
-        <li style="border-right: solid 2px black ;"><a routerLink="/profile">Настройки профиля</a></li>
-        <li><a routerLink="/place-settings">Настройки мест</a></li>
-        <li *ngIf="user.role_id == 2"><a routerLink="/ad-business">Продвижение</a></li>
-      </ul>
+<div *ngIf="user">
+  <div class="profile-settings">
+    <div class="return-to-main">
+      <a routerLink="/">
+        <img src="assets/img/return-button.svg" alt="return-button" class="return-button">
+      </a>
+      <span>Вернуться к поиску</span>
     </div>
 
-    <div class="top-information">
-      <div class="photo-container">
-        <input id="avatar" class="dn" type="file" name="avatar" (change)="onFileUpload($event)" #avatar>
-        <label for="avatar"></label>
-        <button type="button" (click)="triggerClick()">
-          <img [src]="imagePreview || user.photo_user" alt="profile" onerror="this.src='assets/img/logo.svg'"
-            *ngIf="imagePreview || user.photo_user">
+    <div class="main-top-content">
+
+      <div class="profile-navigation">
+        <ul>
+          <li><a routerLink="/favourites">Избранное</a></li>
+          <li style="border-right: solid 2px black ;"><a routerLink="/profile">Настройки профиля</a></li>
+          <li><a routerLink="/place-settings">Настройки мест</a></li>
+          <li *ngIf="user.role_id == 2"><a routerLink="/ad-business">Продвижение</a></li>
+        </ul>
+      </div>
+
+      <div class="top-information">
+        <div class="photo-container">
+          <input id="avatar" class="dn" type="file" name="avatar" (change)="onFileUpload($event)" #avatar>
+          <label for="avatar"></label>
+          <button type="button" (click)="triggerClick()">
+            <img [src]="imagePreview || user.photo_user" alt="profile" onerror="this.src='assets/img/logo.svg'"
+              *ngIf="imagePreview || user.photo_user">
+          </button>
+        </div>
+        <ul>
+
+          <h2>{{user.name + ' ' + user.surname}}</h2>
+          <span>{{user.phone}}</span>
+        </ul>
+      </div>
+
+    </div>
+
+    <div class=" progress-information" *ngIf="user.role_id === 1">
+      <div class="progress-donuts">
+        <div *ngIf="userCoworkingsCount === 0">
+          <img src="assets/img/0of5.png" alt="0of5" class="donut">
+        </div>
+        <div *ngIf="userCoworkingsCount === 1">
+          <img src="assets/img/1of5.png" alt="1of5" class="donut">
+        </div>
+        <div *ngIf="userCoworkingsCount === 2">
+          <img src="assets/img/2of5.png" alt="2of5" class="donut">
+        </div>
+        <div *ngIf="userCoworkingsCount === 3">
+          <img src="assets/img/3of5.png" alt="3of5" class="donut">
+        </div>
+        <div *ngIf="userCoworkingsCount === 4">
+          <img src="assets/img/4of5.png" alt="4of5" class="donut">
+        </div>
+        <div *ngIf="userCoworkingsCount === 5">
+          <img src="assets/img/5of5.png" alt="5of5" class="donut">
+        </div>
+      </div>
+
+      <div class="progress-information__span">
+        <p *ngIf="userCoworkingsCount !== 5">Добавь пять мест и получи подарок</p>
+        <p *ngIf="userCoworkingsCount === 5">Добавь ещё одно место и получи подарок</p>
+        <button class="progress-information__btn" routerLink="/main/add">
+          Добавить место
         </button>
       </div>
-      <ul>
-
-        <h2>{{user.name + ' ' + user.surname}}</h2>
-        <span>{{user.phone}}</span>
-      </ul>
     </div>
 
-  </div>
+    <form class="about-information" [formGroup]="form" (ngSubmit)="onSubmit()">
+      <p class="title">О себе</p>
 
-  <div class=" progress-information" *ngIf="user.role_id === 1">
-    <div class="progress-donuts">
-      <div *ngIf="userCoworkingsCount === 0">
-        <img src="assets/img/0of5.png" alt="0of5" class="donut">
-      </div>
-      <div *ngIf="userCoworkingsCount === 1">
-        <img src="assets/img/1of5.png" alt="1of5" class="donut">
-      </div>
-      <div *ngIf="userCoworkingsCount === 2">
-        <img src="assets/img/2of5.png" alt="2of5" class="donut">
-      </div>
-      <div *ngIf="userCoworkingsCount === 3">
-        <img src="assets/img/3of5.png" alt="3of5" class="donut">
-      </div>
-      <div *ngIf="userCoworkingsCount === 4">
-        <img src="assets/img/4of5.png" alt="4of5" class="donut">
-      </div>
-      <div *ngIf="userCoworkingsCount === 5">
-        <img src="assets/img/5of5.png" alt="5of5" class="donut">
-      </div>
-    </div>
+      <div class="about-information display-flex">
+        <div class="input-field name">
+          <input id="name" placeholder="Имя" type="text" formControlName="name">
+          <label for="name"></label>
+        </div>
 
-    <div class="progress-information__span">
-      <p *ngIf="userCoworkingsCount !== 5">Добавь пять мест и получи подарок</p>
-      <p *ngIf="userCoworkingsCount === 5">Добавь ещё одно место и получи подарок</p>
-      <button class="progress-information__btn" routerLink="/main/add">
-        Добавить место
+        <div class="input-field surname">
+          <input id="surname" placeholder="Фамилия" type="text" formControlName="surname">
+          <label for="surname"></label>
+        </div>
+      </div>
+
+      <div class="input-field city">
+        <input id="city" placeholder="Город" type="text" formControlName="city">
+        <label for="city"></label>
+      </div>
+
+      <div class="input-field phone">
+        <input id="phone" placeholder="Номер телефона" type="phone" formControlName="phone">
+        <label for="phone"></label>
+      </div>
+
+      <button class="progress-information-input__btn" type="submit" [disabled]="form.invalid || form.disabled">
+        Сохранить
       </button>
+    </form>
+
+    <div class="business-information" *ngIf="user.role_id == 1">
+      <p class="title" style="margin-bottom: 22px;">
+        Бизнес-аккаунт
+      </p>
+      <p class="business-information__text">
+        Если ты являешься владельцем заведения и хочешь продвигать его, то переходи на бизнес-аккаунт.
+      </p>
+
+      <div class="button-flex">
+        <button (click)="[onSubmitBusiness(), showPopupAndRedirect()]" class="business-information__btn">
+          Перейти на бизнес-аккаунт
+        </button>
+      </div>
+
+    </div>
+    <div class="overlay" *ngIf="showPopup"></div>
+
+    <div class="popup" *ngIf="showPopup">
+      <img src="../../../../assets/img/check-busines.svg" alt="Вы успешно перешли на бизнес-аккаунт!">
     </div>
   </div>
 
-  <form class="about-information" [formGroup]="form" (ngSubmit)="onSubmit()">
-    <p class="title">О себе</p>
+  <app-footer></app-footer>
 
-    <div class="about-information display-flex">
-      <div class="input-field name">
-        <input id="name" placeholder="Имя" type="text" formControlName="name">
-        <label for="name"></label>
-      </div>
-
-      <div class="input-field surname">
-        <input id="surname" placeholder="Фамилия" type="text" formControlName="surname">
-        <label for="surname"></label>
-      </div>
-    </div>
-
-    <div class="input-field city">
-      <input id="city" placeholder="Город" type="text" formControlName="city">
-      <label for="city"></label>
-    </div>
-
-    <div class="input-field phone">
-      <input id="phone" placeholder="Номер телефона" type="phone" formControlName="phone">
-      <label for="phone"></label>
-    </div>
-
-    <button class="progress-information-input__btn" type="submit" [disabled]="form.invalid || form.disabled">
-      Сохранить
-    </button>
-  </form>
-
-  <div class="business-information" *ngIf="user.role_id == 1">
-    <p class="title" style="margin-bottom: 22px;">
-      Бизнес-аккаунт
-    </p>
-    <p class="business-information__text">
-      Если ты являешься владельцем заведения и хочешь продвигать его, то переходи на бизнес-аккаунт.
-    </p>
-
-    <div class="button-flex">
-      <button (click)="[onSubmitBusiness(), showPopupAndRedirect()]" class="business-information__btn">
-        Перейти на бизнес-аккаунт
-      </button>
-    </div>
-
-  </div>
-  <div class="overlay" *ngIf="showPopup"></div>
-
-      <div class="popup" *ngIf="showPopup">
-        <img src="../../../../assets/img/check-busines.svg" alt="Вы успешно перешли на бизнес-аккаунт!">
-      </div>
 </div>
-
-<app-footer></app-footer>
