--- a/src/app/components/add-coworking/add-coworking.component.css
+++ b/src/app/components/add-coworking/add-coworking.component.css
@@ -128,7 +128,7 @@
     margin-bottom: 24px;
   }
 
-  .filter-tags span {
+  .filter-tags .extra-information {
     font-weight: 600;
     font-size: 20px;
     line-height: 27px;
@@ -147,7 +147,6 @@
   }
 
   .pressed-tag {
-
     text-align: center;
     min-width: 80px;
     max-width: 170px;
@@ -157,6 +156,11 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 20px;
     transition: all .2s ease-out;
+  }
+
+  .pressed-tag img {
+    width: 11px;
+    height: 11px;
   }
 
   .tags-input {
@@ -176,6 +180,11 @@
     position: absolute;
     right: 20px;
     top: 20px;
+  }
+
+  .btn-settings img {
+    width: 13px;
+    height: 13px;
   }
 
   .dropdown {
@@ -221,6 +230,10 @@
 
     color: #000000;
     border: 1px solid rgba(0, 0, 0, 0.1);
+  }
+
+  .dropdown-link .tag-name {
+    font-size: 16px;
   }
 
   .photo-container {
@@ -331,6 +344,11 @@
     background-color: #E0E0D6;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
+
+    color: rgba(27, 31, 59, 0.60);
+    font-size: 15px;
+    line-height: 28px;
+    font-weight: 600;
   }
 
   .button-return {
@@ -339,6 +357,11 @@
     border: 1px solid #EDEDED;
     filter: drop-shadow(0px 2px 5px rgba(0, 0, 0, 0.16));
     border-radius: 10px;
+
+    color: rgba(27, 31, 59, 0.60);
+    font-size: 15px;
+    line-height: 28px;
+    font-weight: 600;
   }
 
   .button-add:hover,
@@ -527,7 +550,7 @@
     margin-bottom: calc(0.83*24px);
   }
 
-  .filter-tags span {
+  .filter-tags .extra-information {
     font-weight: 600;
     font-size: calc(0.75*20px);
     line-height: calc(0.83*27px);
@@ -546,8 +569,6 @@
   }
 
   .pressed-tag {
-
-    text-align: center;
     min-width: calc(0.75*80px);
     max-width: calc(0.75*170px);
     font-size: calc(0.75*20px);
@@ -556,6 +577,11 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 20px;
     transition: all .2s ease-out;
+  }
+
+  .pressed-tag img {
+    width: calc(0.75*11px);
+    height: calc(0.75*11px);
   }
 
   .tags-input {
@@ -572,9 +598,13 @@
   }
 
   .btn-settings {
-    position: absolute;
     right: calc(0.75*20px);
     top: calc(0.83*20px);
+  }
+
+  .btn-settings img {
+    width: calc(0.75*13px);
+    height: calc(0.75*13px);
   }
 
   .dropdown {
@@ -620,6 +650,10 @@
 
     color: #000000;
     border: 1px solid rgba(0, 0, 0, 0.1);
+  }
+
+  .dropdown-link .tag-name {
+    font-size: calc(0.75*16px);
   }
 
   .photo-container {
@@ -712,6 +746,9 @@
     background-color: #E0E0D6;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
+
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*28px);
   }
 
   .button-return {
@@ -720,6 +757,8 @@
     border: 1px solid #EDEDED;
     filter: drop-shadow(0px 2px 5px rgba(0, 0, 0, 0.16));
     border-radius: 10px;
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*28px);
   }
 
 
@@ -899,7 +938,7 @@
     margin-bottom: calc(0.71*24px);
   }
 
-  .filter-tags span {
+  .filter-tags .extra-information {
     font-weight: 600;
     font-size: calc(0.71*20px);
     line-height: calc(0.71*27px);
@@ -918,8 +957,6 @@
   }
 
   .pressed-tag {
-
-    text-align: center;
     min-width: calc(0.71*80px);
     max-width: calc(0.71*170px);
     font-size: calc(0.71*20px);
@@ -928,6 +965,11 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 20px;
     transition: all .2s ease-out;
+  }
+
+  .pressed-tag img {
+    width: calc(0.71*11px);
+    height: calc(0.71*11px);
   }
 
   .tags-input {
@@ -944,9 +986,13 @@
   }
 
   .btn-settings {
-    position: absolute;
     right: calc(0.71*20px);
     top: calc(0.71*20px);
+  }
+
+  .btn-settings img {
+    width: calc(0.71*13px);
+    height: calc(0.71*13px);
   }
 
   .dropdown {
@@ -992,6 +1038,10 @@
 
     color: #000000;
     border: 1px solid rgba(0, 0, 0, 0.1);
+  }
+
+  .dropdown-link .tag-name {
+    font-size: calc(0.71*16px);
   }
 
   .photo-container {
@@ -1084,6 +1134,8 @@
     background-color: #E0E0D6;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
+    font-size: calc(0.71*15px);
+    line-height: calc(0.71*28px);
   }
 
   .button-return {
@@ -1092,6 +1144,8 @@
     border: 1px solid #EDEDED;
     filter: drop-shadow(0px 2px 5px rgba(0, 0, 0, 0.16));
     border-radius: 10px;
+    font-size: calc(0.71*15px);
+    line-height: calc(0.71*28px);
   }
 
 
