--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,7 +1,7 @@
 @media screen and (max-width: 5000px) {
   .footer-container {
     display: flex;
-    width: 2000px;
+    width: 100%;
     height: 300px;
     background: #E0E0D6;
     margin-top: auto;
